--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,8 @@
             "args": [],
             "cwd": "${workspaceFolder}",
             "env": {
-                "CARGO_MANIFEST_DIR": "${workspaceFolder}"
+                "CARGO_MANIFEST_DIR": "${workspaceFolder}",
+//                "RUST_BACKTRACE": "1" 
             }
         },
         {
